--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 카메라 사용 권한 -->
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <!-- 내부 저장소 사용 권한 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 인터넷 사용 권한 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -20,6 +25,8 @@
         android:theme="@style/Theme.Recycle_App"
         tools:targetApi="31">
 
+
+        <!-- 파일 저장소 관련 프로바이더 -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.icarus.recycle_app.fileprovider"
@@ -34,20 +41,24 @@
         <activity
             android:name=".ui.search.image.trash_request.TrashRequestActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-
         </activity>
+
+
+
+        <!-- 검색 화면 -->
         <activity
             android:name=".ui.search.SearchActivity"
             android:exported="false" />
+
+
+        <!-- 도움말 화면 액티비티 -->
         <activity
             android:name=".ui.onboarding.OnBoardingActivity"
             android:exported="false" />
+
+
+
+        <!-- 스플래시 화면 -->
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
@@ -57,6 +68,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <!-- 메인 액티비티 화면 -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
