--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,22 +16,20 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.Recycle_App"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config">
-
-
-
-
+        tools:targetApi="31">
+        <activity
+            android:name=".ui.setting.DeveloperInfoActivity"
+            android:exported="false" />
         <!-- 쓰레기 안내 액티비티 -->
         <activity
             android:name=".ui.info.content.InfoContentActivity"
-            android:exported="true" />
-        <!-- 카테고리 액티비티 -->
-        <activity android:name=".ui.category.CategoryResultActivity"
-            android:exported="true"/>
-        <!-- 파일 저장소 관련 프로바이더 -->
+            android:exported="true" /> <!-- 카테고리 액티비티 -->
+        <activity
+            android:name=".ui.category.CategoryResultActivity"
+            android:exported="true" /> <!-- 파일 저장소 관련 프로바이더 -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.icarus.recycle_app.fileprovider"
@@ -41,33 +39,25 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider> <!-- 쓰레기 결과 반환 액티비티 -->
-
-
         <activity
             android:name=".ui.search.image.trash_request.TrashRequestActivity"
-            android:exported="true"/>
-
-        <!-- 검색 화면 -->
+            android:exported="true" /> <!-- 검색 화면 -->
         <activity
             android:name=".ui.search.SearchActivity"
             android:exported="false" /> <!-- 도움말 화면 액티비티 -->
         <activity
             android:name=".ui.search.base.SearchListActivity"
-            android:exported="false"/> <!-- 검색 화면 액티비티 -->
+            android:exported="false" /> <!-- 검색 화면 액티비티 -->
         <activity
             android:name=".ui.onboarding.OnBoardingActivity"
             android:exported="false" /> <!-- 스플래시 화면 -->
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:exported="true">
-
-        </activity> <!-- 메인 액티비티 화면 -->
+            android:exported="true"></activity> <!-- 메인 액티비티 화면 -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name" >
-
-
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
