--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <queries>
         <intent>
             <action android:name="android.intent.action.SENDTO" />
+
             <data android:scheme="mailto" />
         </intent>
     </queries>
@@ -28,9 +29,11 @@
         android:theme="@style/Theme.Recycle_App"
         tools:targetApi="31">
         <activity
-            android:name=".ui.setting.DeveloperInfoActivity"
+            android:name=".ui.setting.LicenseActivity"
             android:exported="false" />
-        <!-- 쓰레기 안내 액티비티 -->
+        <activity
+            android:name=".ui.setting.DeveloperInfoActivity"
+            android:exported="false" /> <!-- 쓰레기 안내 액티비티 -->
         <activity
             android:name=".ui.info.content.InfoContentActivity"
             android:exported="true" /> <!-- 카테고리 액티비티 -->
@@ -57,29 +60,23 @@
             android:exported="false" /> <!-- 검색 화면 액티비티 -->
         <activity
             android:name=".ui.onboarding.OnBoardingActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
-
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity> <!-- 메인 액티비티 화면 -->
-        <activity android:name=".ui.search.image.trash_request.ImageResultActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".ui.search.image.trash_request.ImageResultActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
