--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,9 @@
             android:exported="false" /> <!-- 검색 화면 액티비티 -->
         <activity
             android:name=".ui.onboarding.OnBoardingActivity"
-            android:exported="true"></activity>
+            android:exported="true"/>
+        <activity android:name=".ui.setting.BookmarkListActivity"
+            android:exported="false"/>
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
