--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         android:theme="@style/Theme.Recycle_App"
         tools:targetApi="31">
         <activity
+            android:name=".ui.study_game.StudyGameActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.setting.LicenseActivity"
             android:exported="false" />
         <activity
@@ -60,7 +63,7 @@
             android:exported="false" /> <!-- 검색 화면 액티비티 -->
         <activity
             android:name=".ui.onboarding.OnBoardingActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
@@ -76,7 +79,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
