--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Recycle_App"
         tools:targetApi="31">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.icarus.recycle_app.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/file_paths" /> <!-- @xml/file_paths는 나중에 생성합니다 -->
+    </provider>
         <activity
             android:name=".ui.study_game.StudyGameActivity"
             android:exported="false" />
